--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-pyrogram
-TgCrypto
-py-tgcalls==0.8.1rc1
-python-dotenv
-yt_dlp
-youtube_search_python
-requests
-aiohttp
-aiofiles
-asyncio
-youtube_search
-search_engine_parser
-ffmpeg
-Pillow
 ujson
+tgcrypto
+asyncio
+ffmpeg-python
+py-tgcalls==0.8.1rc1
+git+https://github.com/pyrogram/pyrogram@master
+youtube-search-python
+youtube-search
+httpx==0.13.3
+python-dotenv
+aiofiles
+aiohttp
+requests
+psutil
+future
+wget
+yt-dlp
